--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             background: white;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 30px;
         }
         h1, h2, h3 {
             color: #333;
@@ -31,8 +32,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hálótervezés - MPM</h1>
-        <h2>Általános információk</h2>
+        <h1>MPM Hálótervezés</h1>
+        <p><strong>Készítette:</strong> Vas Szilárd</p>
         <p><strong>Intézmény:</strong> Debreceni SZC Mechwart András Gépipari és Informatikai Technikum</p>
         
         <h2>Az MPM (Metra Potential Method) Háló</h2>
@@ -60,7 +61,9 @@
             <tr><td>Vége</td><td>-</td><td>15</td><td>15</td></tr>
         </table>
 
-        <p><strong>Készült:</strong> Debrecen, 2025. március. 1.</p>
+        <p>Források: ><a href="https://www.nive.hu/Downloads/Szakkepzesi_dokumentumok/Bemeneti_kompetenciak_meresi_ertekelesi_eszkozrendszerenek_kialakitasa/4_0688_020_101015.pdf" target="_blank">NIVE - Szakképzési dokumentumok</a>, <a href="https://www.oplit.com/en/articles/la-methode-des-potentiels-metra-mpm" target="_blank">Oplit - Metra Potential Method</a></p>
+
+        <p><strong>Készült:</strong> Balmazújváros, 2025. március. 1.</p>
     </div>
 </body>
 </html>
